--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -531,6 +531,21 @@ samp {
   font-size: 0.85rem;
   line-height: 1.45rem;
 }
+card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+container {
+  padding: 2px 16px;
+}
 abbr {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
@@ -572,6 +587,13 @@ code {
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
+}
+.limitTextHeight {
+  font-size: 80%;  
+}
+.searchMargin {
+  padding-left: 2em;
+  padding-right: 2em;
 }
 pre code {
   background: none;
