--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,6 +5,48 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
 }
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -562,6 +604,18 @@ container {
   --color-text-default-soft: #6a6a6a;
   --color-text-inverse: #1B91DA;
   --color-text-inverse-soft: #1B91DA;
+  --color-bg-accent-right: 
+}
+.theme-my-dark
+{
+  background-color: #192734;
+  color:white;
+}
+.theme-my-light
+{
+  background-color: white ;
+  color: #192734;
+  
 }
 abbr {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
@@ -633,4 +687,28 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+.header-col{
+  display: flex;
+  align-items: stretch;
+}
+.header-div{
+  margin-top: 2px;
+  margin-bottom: 20%;
+}
+.header-a{
+  size: 50px;
+
+}
+.button-text-light
+{
+  margin-top: 20px;
+  float: right;
+  color: black;
+}
+.button-text-dark
+{
+  margin-top: 20px;
+  float: right;
+  color: white;
 }
